--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 FRONTEND_URL=http://localhost:5173
 
 DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=admin
+DB_PORT=5432
+DB_USERNAME=postgres
 DB_PASSWORD=1234
 DB_DATABASE=imc
 
