--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
@@ -34,6 +35,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.2",
     "mysql2": "^3.14.5",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
