--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
+# FRONTEND
 FRONTEND_URL=http://localhost:5173
 
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=1234
-DB_DATABASE=imc
+# MongoDB
+MONGO_URI=mongodb://localhost:27017
+MONGO_DB=imc
 
+# JWT
 JWT_ACCESS_SECRET=accessSecret
 JWT_ACCESS_EXPIRATION=15m
 JWT_REFRESH_SECRET=refreshSecret
